[#633] Fix distorted logo

--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -163,10 +163,6 @@
       align-items: center;
       gap: 8px;
 
-      .logo-image {
-        width: fit-content;
-      }
-
       .logo-text {
         color: #767676;
         font-family: "RocGrotesk";
